--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!-- this is my second attempt at this, I forgot to push the first one... --!>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Etch-a-sketch</title>
+</head>
+<body>
+    <h1> Etch-A-Sketch </h1>
+    <div id="sketchPad">
+
+        
+    </div>
+</body>
+</html>
